Update CSS to prevent homepage slider from being hidden on Safari browsers

--- a/wp-content/themes/source-tech/css/ri-styles.css
+++ b/wp-content/themes/source-tech/css/ri-styles.css
@@ -2,6 +2,13 @@
 #menu-item-766 {
 	background: #ea662b;
 }
+/* Homepage Slider */
+#n2-ss-2.n2-ss-load-fade.n2-ss-loaded {
+	opacity: 1 !important;
+}
+#n2-ss-2.n2-ss-load-fade {
+	transition: none !important;
+}
 /* WooCommerce */
 .woocommerce-product-gallery {
 	opacity: 1 !important;
